--- a/main/style.css
+++ b/main/style.css
@@ -1,11 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,700|Quattrocento:700');
 
+@font-face {
+  font-family: spookyFont;
+  src: url(RestlessSoulBB-Regular.otf);
+}
+
+
 body {
-    font-family: 'Open Sans', sans-serif;
-    font-weight: lighter;
+    font-family: spookyFont	;
+    font-weight: normal;
     background: white;
     overflow: hidden;
     cursor:url(sock_pointer.cur),auto;
+	
+	
 }
 
 body.switched {
@@ -15,7 +23,7 @@ body.switched {
 h1,
 h2 {
     text-align: center;
-    font-family: "Quattrocento", Georgia, 'Times New Roman', Times, serif;
+    font-family: spookyFont;
     margin: 0;
     padding: 0;
 }
@@ -28,7 +36,7 @@ h1 {
 h2 {
     font-size: 14pt;
     font-style: italic;
-    font-family: sans-serif;
+    font-family: spookyFont;
     font-weight: lighter;
     color: #BBB;
 }
@@ -115,7 +123,7 @@ p {
 a {
     font-weight: 700;
     color: #b97c2c;
-    font-family: sans-serif;
+    font-family: spookyFont;
     transition: color 0.6s;
     text-decoration: none;
 }
@@ -223,6 +231,8 @@ img {
 body.dark {
     background: black;
     color: white;
+	background-image: url(hotellobby.png); 
+	background-repeat: no-repeat;
 }
 
 .dark h2 {
