--- a/main/style.css
+++ b/main/style.css
@@ -114,8 +114,8 @@ h2 {
 }
 
 p {
-    font-size: 13pt;
-    color: #888;
+    font-size: 15pt;
+    color: lavender;
     line-height: 1.7em;
     font-weight: lighter;
 }
@@ -248,7 +248,7 @@ body.dark {
 }
 
 .dark a {
-    color: #cc8f1a;
+    color: purple;
     transition: color 0.6s;
 }
 
